# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                       unitTest for Bonmin                            #
########################################################################

noinst_PROGRAMS = 

if COIN_HAS_ASL
noinst_PROGRAMS += unitTest
endif

noinst_PROGRAMS += CppExample

unitTest_SOURCES = \
	InterfaceTest.cpp 

# List libraries of COIN projects; libs with AMPL interface have to come before ASLLIB
unitTest_LDADD =
if COIN_HAS_ASL
unitTest_LDADD += \
        ../src/CbcBonmin/libbonminampl.la \
	$(IPOPTOBJDIR)/src/Apps/AmplSolver/libamplinterface.la
endif
unitTest_LDADD += \
        ../src/CbcBonmin/libbonmin.la \
	$(IPOPTLIBS) \
	$(COINLIBS) \
	$(ASLLIB) \
	$(ADDLIBS)


#########################################################################
##                      Example C++ program                             #
#########################################################################

CppExample_SOURCES = MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp

# List libraries of COIN projects
CppExample_LDADD = \
        ../src/CbcBonmin/libbonmin.la \
        $(IPOPTLIBS) \
        $(COINLIBS)

CppExample_LDADD += $(ADDLIBS)

COINLIBS = \
	$(CBCOBJDIR)/src/libCbc.la \
	$(CGLOBJDIR)/src/libCgl.la \
	$(OSIOBJDIR)/src/OsiClp/libOsiClp.la \
	$(OSIOBJDIR)/src/libOsi.la \
	$(CLPOBJDIR)/src/libClp.la \
	$(COINUTILSOBJDIR)/src/libCoinUtils.la

if COIN_HAS_CPX
  COINLIBS += \
	$(OSIOBJDIR)/src/OsiCpx/libOsiCpx.la \
	$(COINUTILSOBJDIR)/src/libCoinUtils.la \
	$(CPXLIB)
endif

IPOPTLIBS = \
	$(IPOPTOBJDIR)/src/Interfaces/libipopt.la

# List additional libraries
LIBS += `cat $(IPOPTOBJDIR)/src/Interfaces/ipopt_addlibs_cpp.txt`

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = \
        -I`$(CYGPATH_W) $(srcdir)/../src/Apps` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Ipopt` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Filter` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Ampl` \
	-I`$(CYGPATH_W) $(srcdir)/../src/CbcBonmin` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/Branching` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/OaGenerators` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/Ampl` \
	-I`$(CYGPATH_W) $(IPOPTOBJDIR)/inc` \
	-I`$(CYGPATH_W) $(IPOPTSRCDIR)/src/contrib/CGPenalty` \
	-I`$(CYGPATH_W) $(IPOPTSRCDIR)/src/Common` \
	-I`$(CYGPATH_W) $(IPOPTSRCDIR)/src/Interfaces` \
	-I`$(CYGPATH_W) $(IPOPTSRCDIR)/src/LinAlg` \
	-I`$(CYGPATH_W) $(COINUTILSSRCDIR)/src` \
	-I`$(CYGPATH_W) $(COINUTILSOBJDIR)/inc` \
	-I`$(CYGPATH_W) $(CBCSRCDIR)/src` \
	-I`$(CYGPATH_W) $(CBCOBJDIR)/inc` \
	-I`$(CYGPATH_W) $(OSISRCDIR)/src` \
	-I`$(CYGPATH_W) $(CGLSRCDIR)/src` \
	-I`$(CYGPATH_W) $(OSISRCDIR)/src/OsiClp` \
	-I`$(CYGPATH_W) $(CLPOBJDIR)/inc` \
	-I`$(CYGPATH_W) $(CLPSRCDIR)/src` \
          $(ASL_CPPFLAGS)


# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

test: unitTest$(EXEEXT) CppExample$(EXEEXT)
	./unitTest$(EXEEXT)
	./CppExample$(EXEEXT)

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp
