# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                       unitTest for Bonmin                            #
########################################################################

noinst_PROGRAMS = 

if COIN_HAS_ASL
noinst_PROGRAMS += unitTest
endif

noinst_PROGRAMS += CppExample

unitTest_SOURCES = \
	InterfaceTest.cpp 

# List libraries of COIN projects; libs with AMPL interface have to come before ASLLIB
unitTest_LDADD =
if COIN_HAS_ASL
unitTest_LDADD += \
        ../src/CbcBonmin/libbonminampl.la \
	$(ASL_LIBS)
endif
unitTest_LDADD += \
        ../src/CbcBonmin/libbonmin.la \
	$(BONMINLIB_LIBS)


#########################################################################
##                      Example C++ program                             #
#########################################################################

CppExample_SOURCES = MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp

# List libraries of COIN projects
CppExample_LDADD = \
        ../src/CbcBonmin/libbonmin.la \
        $(BONMINLIB_LIBS)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = $(BONMINLIB_CFLAGS) $(ASL_CFLAGS) \
        -I`$(CYGPATH_W) $(srcdir)/../src/Apps` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Ipopt` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Filter` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Ampl` \
	-I`$(CYGPATH_W) $(srcdir)/../src/CbcBonmin` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/Branching` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/OaGenerators` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/Ampl`

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

test: unitTest$(EXEEXT) CppExample$(EXEEXT)
	./unitTest$(EXEEXT)
	./CppExample$(EXEEXT)

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp
