# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                       unitTest for Bonmin                            #
########################################################################

noinst_PROGRAMS = 

if COIN_HAS_ASL
noinst_PROGRAMS += unitTest
endif

noinst_PROGRAMS += CppExample

unitTest_SOURCES = \
	InterfaceTest.cpp 

# List libraries that need to be linked in
# libs with AMPL interface have to come before ASLLIB
unitTest_LDADD =
unitTest_DEPENDENCIES =

if COIN_HAS_ASL
unitTest_LDADD        += ../src/CbcBonmin/libbonminampl.la $(ASL_LIBS)
unitTest_DEPENDENCIES += ../src/CbcBonmin/libbonminampl.la $(ASL_DEPENDENCIES)
endif

unitTest_LDADD        += ../src/CbcBonmin/libbonmin.la $(BONMINLIB_LIBS)
unitTest_DEPENDENCIES += ../src/CbcBonmin/libbonmin.la $(BONMINLIB_DEPENDENCIES)


#########################################################################
##                      Example C++ program                             #
#########################################################################

CppExample_SOURCES = MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp

# List libraries that need to be linked in
CppExample_LDADD        = ../src/CbcBonmin/libbonmin.la $(BONMINLIB_LIBS)
CppExample_DEPENDENCIES = ../src/CbcBonmin/libbonmin.la $(BONMINLIB_DEPENDENCIES)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = $(BONMINLIB_CFLAGS) $(ASL_CFLAGS) \
        -I`$(CYGPATH_W) $(srcdir)/../src/Apps` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Ipopt` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Filter` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Interfaces/Ampl` \
	-I`$(CYGPATH_W) $(srcdir)/../src/CbcBonmin` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/Branching` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/OaGenerators` \
	-I`$(CYGPATH_W) $(srcdir)/../src/Algorithms/Ampl`

# This line is necessary to allow VPATH compilation
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/src/Interfaces

test: unitTest$(EXEEXT) CppExample$(EXEEXT)
	./unitTest$(EXEEXT)
	./CppExample$(EXEEXT)

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = MyBonmin.cpp  MyTMINLP.cpp  MyTMINLP.hpp
